--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -1378,12 +1378,12 @@ le podemos añadir un símbolo nuevo $b$ cambiando la expresión anterior por
             \node[label={[red]right:{$d$}}] at (1.625, 2) {};
 
             % Flechas
-            \draw[->, thick] (-0.125,0.73) ++(0, -0.01) -- ++(-0.01,0.04); %1
+            \draw[<-, thick] (-0.125,0.73) ++(0, -0.01) -- ++(-0.01,0.04); %1
             \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
-            \draw[->, thick] (2.125, 0.75) ++(0, 0.01) -- ++(-0.01,-0.04); %3
+            \draw[<-, thick] (2.125, 0.75) ++(0, 0.01) -- ++(-0.01,-0.04); %3
 
             \draw[<-, thick, red] (0.375, 2) ++(-0.01,-0.01) -- ++(0.01,0.01); %2
-            \draw[->, thick, red] (1.625, 2) ++(0.01,-0.01) -- ++(-0.01,0.01); %3
+            \draw[<-, thick, red] (1.625, 2) ++(0.01,-0.01) -- ++(-0.01,0.01); %3
         \end{scope}
 
     \end{tikzpicture}
@@ -1413,11 +1413,11 @@ Es el proceso contrario a desdoblar. Si una expresión $w$ tiene de forma consec
             \node[label={right:{$d$}}] at (1.625, 2) {};
 
             % Flechas
-            \draw[->, thick] (-0.125,0.73) ++(0, -0.01) -- ++(-0.01,0.04); %1
+            \draw[<-, thick] (-0.125,0.73) ++(0, -0.01) -- ++(-0.01,0.04); %1
             \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
-            \draw[->, thick] (2.125, 0.75) ++(0, 0.01) -- ++(-0.01,-0.04); %3
+            \draw[<-, thick] (2.125, 0.75) ++(0, 0.01) -- ++(-0.01,-0.04); %3
 
-            \draw[<-, thick] (0.375, 2) ++(-0.01,-0.01) -- ++(0.01,0.01); %2
+            \draw[->, thick] (0.375, 2) ++(-0.01,-0.01) -- ++(0.01,0.01); %2
             \draw[->, thick] (1.625, 2) ++(0.01,-0.01) -- ++(-0.01,0.01); %3
         \end{scope}
 
@@ -2196,16 +2196,37 @@ Es el proceso contrario a desdoblar. Si una expresión $w$ tiene de forma consec
     \end{gather*}
 \end{observacion}
 
+\subsection{Determinación de $|\cc{P}|$}
 Nuestro objetivo ahora es llegar a que si tenemos una superficie compacta y conexa $S$, entonces tenemos que 
 \begin{gather*}
     S \overset{homeo.}{\cong} \left\{
-        \begin{array}{l}
-            \bb{S}^2\\
-            \bb{T}_n\\
-            \bb{R}\bb{P}^2_n
+        \begin{array}{l l}
+            \bb{S}^2 &: aa^{-1}bb^{-1}\\
+            \bb{T}_n &: a_1b_1a_1^{-1}b_1^{-1}a_2b_2a_2^{-1}b_2^{-1}...a_nb_na_n^{-1}b_n^{-1}\\
+            \bb{R}\bb{P}^2_n &: a_1a_1a_2a_2...a_na_n
         \end{array}
     \right.
 \end{gather*}
+
+Vamos a partir de una presentación poligonal $\cc{P}$ y vamos a ver un algoritmo que nos dirá que la superficie compacta $|\cc{P}|$ en caso de ser conexa será homeomorfa a alguna de las anteriores.
+
+\subsubsection{Algoritmo de determinación de $|\cc{P}|$}
+\begin{enumerate}
+    \item El primer paso del algoritmo es diferenciar las componentes conexas de la siguiente forma. Tomamos la primera expresión $w_1$ y a esta le pegamos cualquier otra expresión $w_i$ que tenga un símbolo común. Entonces me queda una nueva expresión $w_1'$ a la que le volvemos a aplicar el paso 1 hasta obtener una expresión donde todos sus símbolos tienen a su pareja en esa expresión. Esta expresión dará (en el cociente) una componente conexa de $|\cc{P}|$. Solamente nos fijaremos entonces en estudiar presentaciones poligonales con una única expresión (ya que queremos que sea conexa).
+
+    \item Ahora de nuestra única expresión le eliminamos los símbolos que aparezcan adyacentes con ellos mismos y con distinto exponente (doblaremos siempre que podamos). Esto lo podremos hacer siempre que al eliminar $aa^{-1}$ nos queden al menos 4 símbolos\footnote{ya que en este caso tienen que estar emparejados}. Si no pudiéramos quitar $aa^{-1}$ de $w$ es porque tenemos o $w=aa^{-1}bb$ o bien $w=aa^{-1}bb^{-1}$. En el primer caso tendremos $|\cc{P}|\cong\bb{R}\bb{P}^2$ y en el segundo tendremos $|\cc{P}|\cong\bb{S}^2$.
+
+    \item Si nuestra expresión es de la forma $w=y_1ay_2a$ donde el símbolo $a$ aparece dos veces con el mismo exponente (y los $y_1$, $y_2$ son conjuntos de expresiones cualesquiera contenidas en $w$), entonces podré cambiar $w$ por $w'=y_1y_2^{-1}aa$ donde si $y_2=b_1^{\veps_1}...b_k^{\veps_k}$ entonces $y_2^{-1}=b_k^{-\veps_k}...b_1^{-\veps_1}$.
+    \begin{proof}
+        Veamos brevemente una demostración de por qué se puede hacer este cambio. Si tenemos nuestra expresión $w=y_1ay_2a$ podemos realizar un corte obteniendo $w_1=y_1ac$ y $w_2=c^{-1}y_2a$. Buscamos ahora pegar a través de $a$ para lo que reflejamos $w_2$ obteniendo $w_2'=a^{-1}y_2^{-1}c$ y rotamos $w_1$ obteniendo $w_1'=cy_1a$. Estamos ya en condiciones de poder pegar $w_1'$ y $w_2'$ a través de $a$ de donde obtenemos una nueva expresión $w_0'=cy_1y_2^{-1}$. Podemos renombrar $c=a$ y obtenemos $w_0''=ay_1y_2^{-1}a$. Con una última rotación llegamos a $w_0'''=y_1y_2^{-1}aa$ que es lo que queríamos obtener.
+    \end{proof}
+    En una cantidad finita de pasos la expresión inicial pasa a ser de la forma 
+    \begin{gather*}
+        w=ya_1a_1a_2a_2...a_ka_k
+    \end{gather*}
+    donde en $y$ solo aparecen parejas de símbolos con distinto exponente (cada pareja). Además, usando el paso 2., es decir, eliminando las expresiones adyacentes en $y$, podemos suponer además que cada símbolo en $y$ con su pareja no son adyacentes.
+\end{enumerate}
+
 
 
 
