--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -26,7 +26,7 @@
     \begin{proof}
         Para la demostración solo se necesita que $X$ sea conexo y no necesariamente localmente arcoconexo. \\
 
-        Partimos la siguiente situación
+        Partimos de la siguiente situación
         \begin{gather*}
             \xymatrix{
                 && R \ar[d]^{p}\\
@@ -35,7 +35,7 @@
         \end{gather*}
         Consideramos el siguiente conjunto
         \begin{gather*}
-            Y=\{x\in X : f_1(x)=f_2(X)\}
+            Y=\{x\in X : f_1(x)=f_2(x)\}
         \end{gather*}
         Como $X$ es conexo y tenemos que $Y \neq \emptyset$, ya que por hipótesis $x_0\in Y$, si probamos que $Y$ es abierto y cerrado tendremos que $Y=X$, es decir, $f_1=f_2$. \\
         
@@ -373,7 +373,7 @@
     \begin{gather*}
         \alpha(t) = (\cos(2\pi t), \sen(2\pi t))
     \end{gather*}
-    y $\pi_1(\bb{S}^1\times \bb{R}, (1,0,1))$ está generado por $[\beta]$ done 
+    y $\pi_1(\bb{S}^1\times \bb{R}, (1,0,1))$ está generado por $[\beta]$ donde 
     \begin{gather*}
         \beta(t) = (\cos(2\pi t), \sen(2\pi t), 1)
     \end{gather*}
@@ -612,9 +612,9 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
 \end{coro}
 
 \begin{teo}
-    Sean $(R_1, p_1)$, $(R_2, p_2)$ dos recubridores de un e.t. $B$. Entonces existe un isomorfismo entre amos recubridores si y solo si dado $b_0\in B$, $r_1\in R_1$ y $r_2 \in R_2$ con $p_1(r_1) = b_0 = p_2(r_2)$ tales que 
+    Sean $(R_1, p_1)$, $(R_2, p_2)$ dos recubridores de un e.t. $B$. Entonces existe un isomorfismo entre ambos recubridores si y solo si dado $b_0\in B$, $r_1\in R_1$ y $r_2 \in R_2$ con $p_1(r_1) = b_0 = p_2(r_2)$ tales que 
     \begin{gather*}
-        p_{1*}(\pi_1(R_1,r_1)) \subseteq p_{2*}(\pi_1(R_2,r_2))
+        p_{1*}(\pi_1(R_1,r_1)) = p_{2*}(\pi_1(R_2,r_2))
     \end{gather*}
     \begin{proof}
         Estamos en la siguiente situación
@@ -824,7 +824,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         Si estudiamos la imagen de los generadores tenemos 
         \begin{gather*}
             (p_k\times p_l)_*([\alpha]) = [\alpha]^k\\
-            (p_k\times p_l)_*([\beta]) = [\beta]^k
+            (p_k\times p_l)_*([\beta]) = [\beta]^l
         \end{gather*}
         y llegamos a que $(\bb{S}^1 \times \bb{S}^1, p_k\times p_l)$ es recubridor y está asociado al subgrupo $k\bb{Z}\times l\bb{Z}$. El grupo imagen sería
         \begin{gather*}
@@ -1001,8 +1001,8 @@ Hasta ahora lo que hemos visto es que para estudiar el número de recubridores d
 
 \begin{ejemplo}\
     \begin{enumerate}
-        \item $\bb{S}^1$ es el recubridor universal de $\bb{R}$.
-        \item $\bb{R}\bb{P}^n$ es el recubridor universal de $\bb{S}^n$ para $n\geq 2$
+        \item $\bb{R}$ es el recubridor universal de $\bb{S}^1$.
+        \item $\bb{S}^n$ es el recubridor universal de $\bb{R}\bb{P}^n$ para $n\geq 2$
         \item $\bb{R}^2$ es el recubridor universal del cilindro $\bb{S}^1 \times \bb{R}$.
         \item $\bb{R}^2$ también es el recubridor universal del toro $\bb{S}^1\times \bb{S}^1$.
     \end{enumerate}
@@ -1027,7 +1027,7 @@ Hasta ahora lo que hemos visto es que para estudiar el número de recubridores d
     \begin{enumerate}
         \item Si $B$ es localmente simplemente conexo, entonces también es semilocalmente simplemente conexo.
         \item Si $B$ es simplemente conexo entonces es semilocalmente simplemente conexo
-        \item Si $U$ es un entorno de $b\in B$ tal que $(i_U)*: \pi_1(U,b) \to \pi_1(B,b)$ es trivial, entonces también es cierto que si $V$ es entorno de $b$ con $V\subseteq B$ se tiene que $(i_V)* : \pi_1(V,v)\to \pi_1(B,b)$ es trivial.
+        \item Si $U$ es un entorno de $b\in B$ tal que $(i_U)*: \pi_1(U,b) \to \pi_1(B,b)$ es trivial, entonces también es cierto que si $V$ es entorno de $b$ con $V\subseteq U$ se tiene que $(i_V)* : \pi_1(V,v)\to \pi_1(B,b)$ es trivial.
     \end{enumerate}
 \end{observacion}
 
