--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -2561,6 +2561,8 @@ Veamos ahora que todas esas superficies son distintas calculando su grupo fundam
         \bb{R}\bb{P}^2 & \longrightarrow & \pi_1(\bb{R}\bb{P}^2) & \equiv \bb{Z}_2
     \end{array}
 \end{gather*}
+
+\subsubsection{El grupo fundamental del $n$-toro}
 Calculemos el grupo fundamental del $n$-toro.
 
 \begin{figure}[H]
@@ -2875,8 +2877,341 @@ por lo que $\pi_1(U)\cong F(a_1,b_1,a_2,b_2,...,a_n,b_n)$. Además el grupo de l
 
 Aplicando Seifert-van Kampen tenemos que 
 \begin{gather*}
-    \pi_1(\bb{T}_n) = \frac{F(a_1,b_1,...,a_n,b_n)}{\langle i_{U*}([\alpha])\rangle_N} = \frac{F(a_1,b_1,...,a_n,b_n)}{\langle ab_1a_1^{-1}...a_nb_na_n^{-1}b_n^{-1} \rangle_N}
+    \pi_1(\bb{T}_n) = \frac{F(a_1,b_1,...,a_n,b_n)}{\langle i_{U*}([\alpha])\rangle_N} = \frac{F(a_1,b_1,...,a_n,b_n)}{\langle ab_1a_1^{-1}b^{-1}...a_nb_na_n^{-1}b_n^{-1} \rangle_N}
+\end{gather*}
+Este grupo no será conmutativo en general pero sí lo será para el 1-toro, en cuyo caso tendremos que 
+\begin{gather*}
+    \pi_1(\bb{T}_n) = \frac{F(a_1,b_1)}{\langle a_1b_1a_1^{-1}b^{-1}\rangle_N}
+\end{gather*}
+y en el cociente se verificará que $[a_1][b_1][a_1]^{-1}[b_1]^{-1} = 1$ por lo que se tendrá que $[a_1][b_1] = [b_1][a_1]$.\\
+
+\subsubsection{El grupo fundamental de $\bb{R}\bb{P}_n^2$}
+Pasamos ahora a calcular el grupo fundamental de $\bb{R}\bb{P}_n^2$.
+
+Con un proceso análogo al del $n$-toro tendremos que 
+\begin{gather*}
+    \pi_1(\bb{R}\bb{P}_n^2) = \frac{F(a_1,...,a_n)}{\langle i_{U*}([\alpha]) \rangle_N} = \frac{F(a_1,...,a_n)}{\langle a_1a_1...a_na_n \rangle_N}
 \end{gather*}
 
+\begin{definicion}
+    Recordemos que dado un grupo $G$ se define el \textbf{conmutador} de $G$ por 
+    \begin{gather*}
+        [G:G] = \langle \{ghg^{-1}h^{-1} : g,h\in G\}\rangle_N
+    \end{gather*}
+    El \textbf{grupo abelianizado} de $G$ es 
+    \begin{gather*}
+        \frac{G}{[G:G]}
+    \end{gather*}
+\end{definicion}
+
+\begin{definicion}
+    En el caso de un espacio topológico $X$, el abelianizado de $\pi_1(X)$ (suponiendo que es arcoconexo) se suele llamar \textbf{primer grupo de homología} de $X$ y se denota por $H_1(X)$ (o bien $H_1(X, \bb{Z})$).
+\end{definicion}
+
+\begin{observacion}
+    Dos grupos $G_1$ y $G_2$ podrían tener el mismo grupo abelianizado aunque no sean isomorfos.
+\end{observacion}
+
+\begin{coro}
+    El primer grupo de homología de las superficies compactas es 
+    \begin{gather*}
+        H_1(\bb{S}^2) = \{0\}\\
+        H_1(\bb{R}\bb{P}^2) = \bb{Z}_2\\
+        H_1(\bb{T}_n) = \bb{Z} \times \overset{(2n)}{...} \times \bb{Z}\\
+        H_1(\bb{R}\bb{P}_n^2) = \bb{Z} \times \overset{(n-1)}{...} \times \bb{Z} \times \bb{Z}_2
+    \end{gather*}
+\end{coro}
+
+\begin{coro}
+    Si $S$ es una superficie conexa y compacta, entonces $S$ es homeomorfa a una y solo una de las siguientes superficies
+    \begin{gather*}
+        \bb{S}^2,\ \bb{T}_n \ \text{ o } \bb{R}\bb{P}_n^2,\ \text{ con }n\geq 1
+    \end{gather*}
+\end{coro}
+
+\section{Característica de Euler y orientabilidad}
+
+\begin{definicion}
+    Dada una presentación poligonal $\cc{P}$ denotamos por $V$, $A$ y $C$ al número de vértices, de aristas y caras (o número de polígonos de $\cc{P}$) respectivamente donde el número de vértices y aristas está visto en el espacio cociente $|\cc{P}|$. Definimos entonces la \textbf{característica de Euler} de $\cc{P}$ como 
+    \begin{gather*}
+        \chi(\cc{P}) = C-A+V
+    \end{gather*} 
+\end{definicion}
+
+\begin{ejemplo}\
+    \begin{enumerate}
+        \item Consideramos la presentación poligonal de $\bb{S}^2$, $\cc{P}=\{a,b;\ aa^{-1}bb^{-1}\}$:
+        
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                \node[label=below:{$a^{-1}$}] at (0.75, 0) {}; %2
+                \node[label=right:{$b$}] at (1.5, 0.75) {}; %3
+                \node[label=above:{$b^{-1}$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                \draw[<-, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                \draw[<-, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+                % Vértices 
+                \filldraw(0,0) circle (1.5pt) node[below left] {$v_1$};
+                \filldraw(1.5,0) circle (1.5pt) node[below right] {$v_2$};
+                \filldraw(1.5,1.5) circle (1.5pt) node[above right] {$v_3$};
+                \filldraw(0,1.5) circle (1.5pt) node[above left] {$v_4$};
+            \end{tikzpicture}
+        \end{figure}
+
+        Tenemos entonces que 
+        \begin{gather*}
+            C=1\\
+            A=2\\
+            V=3
+        \end{gather*}
+        Para contar el número de vértices hemos tenido en cuenta que $[v_2]=[v_4]$ por ser el principio de $a^{-1}$ y $a$ respectivamente. Por tanto tenemos que 
+        \begin{gather*}
+            \chi(\cc{P}) = 1-2+3 = 2
+        \end{gather*}
+
+        \item Consideramos ahora la presentación $\cc{P}=\{a,b,c,d;\ abcd,\ abd^{-1}c^{-1}\}$
+        
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                \begin{scope}
+                    % Cuadrado
+                    \draw[thick] (0,1.5) -- (0,0); %1
+                    \draw[thick] (0,0) -- (1.5,0); %2
+                    \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                    \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                    % Leyenda
+                    \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                    \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                    \node[label=right:{$c$}] at (1.5, 0.75) {}; %3
+                    \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
+
+                    % Flechas
+                    \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                    \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[->, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                    \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+                    % Vértices 
+                    \filldraw(0,0) circle (1.5pt) node[below left] {$v_1$};
+                    \filldraw(1.5,0) circle (1.5pt) node[below right] {$v_2$};
+                    \filldraw(1.5,1.5) circle (1.5pt) node[above right] {$v_3$};
+                    \filldraw(0,1.5) circle (1.5pt) node[above left] {$v_4$};
+                \end{scope}
+
+                \begin{scope}[shift={(4,0)}]
+                    % Cuadrado
+                    \draw[thick] (0,1.5) -- (0,0); %1
+                    \draw[thick] (0,0) -- (1.5,0); %2
+                    \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                    \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                    % Leyenda
+                    \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                    \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                    \node[label=right:{$d^{-1}$}] at (1.5, 0.75) {}; %3
+                    \node[label=above:{$c^{-1}$}] at (0.75, 1.5) {}; %4
+
+                    % Flechas
+                    \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                    \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[<-, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                    \draw[<-, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+                    % Vértices 
+                    \filldraw(0,0) circle (1.5pt) node[below left] {$v_5$};
+                    \filldraw(1.5,0) circle (1.5pt) node[below right] {$v_6$};
+                    \filldraw(1.5,1.5) circle (1.5pt) node[above right] {$v_7$};
+                    \filldraw(0,1.5) circle (1.5pt) node[above left] {$v_8$};
+                \end{scope}
+            \end{tikzpicture}
+        \end{figure}
+        Tendremos ahora 
+        \begin{gather*}
+            C=2\\
+            A=4\\
+            V=3
+        \end{gather*}
+        Donde para contar el número de vértices hemos tenido en cuenta que
+        \begin{gather*}
+            [v_4] = [v_5] = [v_2] = [v_8]
+        \end{gather*}
+        Por tanto 
+        \begin{gather*}
+            \chi(\cc{P}) = 2-4+3 = 1
+        \end{gather*}
+
+        \item Consideramos ahora la presentación poligonal de $\bb{R}\bb{P}^2$, $\cc{P}=\{a,b; aa^{-1}bb\}$
+        
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                \node[label=below:{$a^{-1}$}] at (0.75, 0) {}; %2
+                \node[label=right:{$b$}] at (1.5, 0.75) {}; %3
+                \node[label=above:{$b$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                \draw[<-, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+                % Vértices 
+                \filldraw(0,0) circle (1.5pt) node[below left] {$v_1$};
+                \filldraw(1.5,0) circle (1.5pt) node[below right] {$v_2$};
+                \filldraw(1.5,1.5) circle (1.5pt) node[above right] {$v_3$};
+                \filldraw(0,1.5) circle (1.5pt) node[above left] {$v_4$};
+            \end{tikzpicture}
+        \end{figure}
+
+        Y tendremos que 
+        \begin{gather*}
+            C=1\\
+            A=2\\
+            V=2
+        \end{gather*}
+        Donde hemos tenido en cuenta que $[v_2]=[v_4]=[v_3]$.
+        Por tanto 
+        \begin{gather*}
+            \chi(\cc{P}) = 1-2+2 = 1
+        \end{gather*}
+
+        \item Pensamos ahora en la presentación del $n$-toro,
+        \begin{gather*}
+            \cc{P} = \{a_1,b_1,...,a_n,b_n;\ a_1b_1a_1^{-1}b_1^{-1}...a_nb_na_n^{-1}b_n^{-1}\}
+        \end{gather*}
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+
+                % \draw[thick]
+                % ( 0.6840, -1.8794) --
+                % ( 1.7321, -1.0000) --
+                % ( 1.9696,  0.3473) --
+                % ( 1.2856,  1.5321) --
+                % ( 0.0000,  2.0000) --
+                % (-1.2856,  1.5321) --
+                % (-1.9696,  0.3473) --
+                % (-1.7321, -1.0000) --
+                % (-0.6840, -1.8794) -- cycle;
+
+                % Lado 1
+                \draw[thick] ( 0.6840, -1.8794) -- ( 1.7321, -1.0000);
+                \draw[thick,->] ( 1.1880, -1.4397) -- ( 1.2280, -1.4097);
+                \node at (1.19, -1.48) [below right] {$a_n$};
+
+                % Lado 2
+                \draw[thick] ( 1.7321, -1.0000) -- ( 1.9696,  0.3473);
+                \draw[thick,->] ( 1.8509, -0.3264) -- ( 1.8589, -0.2764);
+                \node at (1.88, -0.15) [right] {$b_n$};
+
+                % Lado 3
+                \draw[thick] ( 1.9696,  0.3473) -- ( 1.2856,  1.5321);
+                \draw[thick,<-] ( 1.6276,  0.9397) -- ( 1.5976,  0.9897);
+                \node at (1.61, 1.02) [above right] {$a_n^{-1}$};
+
+                % Lado 4
+                \draw[thick] ( 1.2856,  1.5321) -- ( 0.0000,  2.0000);
+                \draw[thick,<-] ( 0.6428,  1.7660) -- ( 0.5928,  1.7860);
+                \node at (0.65, 2.05) [above] {$b_n^{-1}$};
+
+                % Lado 5
+                \draw[thick] ( 0.0000,  2.0000) -- (-1.2856,  1.5321);
+                \draw[thick,->] (-0.6428,  1.7660) -- (-0.6928,  1.7460);
+                \node at (-0.65, 2.05) [above] {$a_1$};
+
+                % Lado 6
+                \draw[thick] (-1.2856,  1.5321) -- (-1.9696,  0.3473);
+                \draw[thick,->] (-1.6276,  0.9397) -- (-1.6576,  0.8897);
+                \node at (-1.61, 1.02) [above left] {$b_1$};
+
+                % Lado 7
+                \draw[thick] (-1.9696,  0.3473) -- (-1.7321, -1.0000);
+                \draw[thick,<-] (-1.8509, -0.3264) -- (-1.8429, -0.3764);
+                \node at (-1.88, -0.15) [left] {$a_1^{-1}$};
+
+                % Lado 8
+                \draw[thick] (-1.7321, -1.0000) -- (-0.6840, -1.8794);
+                \draw[thick,<-] (-1.2080, -1.4397) -- (-1.1680, -1.4697);
+                \node at (-1.19, -1.48) [below left] {$b_1^{-1}$};
+
+                % Lado 9
+                \draw[dashed, thick] (-0.6840, -1.8794) -- ( 0.6840, -1.8794);
+                % \draw[thick,->] ( 0.0000, -1.8794) -- ( 0.0500, -1.8794);
+                % \node at (0, -1.92) [below] {L9};
+            \end{tikzpicture}
+        \end{figure}
+
+        Donde ya demostramos anteriormente que solo hay un vértice por lo que tendremos 
+        \begin{gather*}
+            C=1\\
+            A=2n\\
+            V=1
+        \end{gather*}
+        En cuyo caso tendremos que 
+        \begin{gather*}
+            \chi(\cc{P}) = 1-2n+1 = 2-2n = 2(1-n)
+        \end{gather*}
+
+        \item Consideramos la presentación de $\bb{R}\bb{P}_n^{1}$, $\cc{P}=\{a_1,...,a_n;\ a_1a_1...a_na_n\}$.
+        
+        Donde tendremos ya probado que solo hay un vértice por lo que 
+        \begin{gather*}
+            C=1\\
+            A=n\\
+            V=1
+        \end{gather*}
+        Lo que nos dice que $\chi(\cc{P}) = 1-n+1 = 2-n$
+    \end{enumerate}
+\end{ejemplo}
+
+\begin{prop}
+    La característica de Euler de una presentación poligonal es invariante por transformaciones elementales.
+\end{prop}
+
+\begin{coro}
+    Dada una superficie compacta, cualquiera la cararacterística de Euler de cualquier presentación suya es la misma.
+\end{coro}
+
+\begin{definicion}
+    Dada una superficie compacta $S$ definimos su \textbf{característica de Euler} como la característica de Euler de cualquier presentación suya y la denotaremos por $\chi(S)$.
+\end{definicion}
+
+\begin{observacion}
+    Con los ejemplos anteriores podemos llegar a que 
+    \begin{gather*}
+        \chi(\bb{S}^2) = 2\\
+        \chi(\bb{R}\bb{P}^2) = 1\\
+        \chi(\bb{T}_n) = 2-2n\ (\leq 0),\ n\geq 1\\
+        \chi(\bb{R}\bb{P}_n^2) = 2-n\ (\leq 0),\ n\geq 1
+    \end{gather*}
+    Si la superficie que queremos estudiar tuviera característica positiva o impar sería muy fácil de clasificar. Si por el contrario tuviéramos un número negativo par aún no sabríamos clasificarlo.
+\end{observacion}
 
 
