--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -75,7 +75,7 @@
 \end{lema}
 
 \begin{teo}[Teorema de monodromía]
-    Sean $p:R \to B$ una aplicación recubridora, $b_0\in V$ y $r_0\in p^{-1}(b_0)$. El homomorfismo inducido $p_*:\pi_1(R,r_0)\to \pi_1(B,b_0)$ es inyectivo. En partircular, $\pi_1(R,r_0)$ es isomorfo a $p_*(\pi_1(R,r_0))< \pi_1(B,b_0)$.
+    Sean $p:R \to B$ una aplicación recubridora, $b_0\in B$ y $r_0\in p^{-1}(b_0)$. El homomorfismo inducido $p_*:\pi_1(R,r_0)\to \pi_1(B,b_0)$ es inyectivo. En partircular, $\pi_1(R,r_0)$ es isomorfo a $p_*(\pi_1(R,r_0))< \pi_1(B,b_0)$.
 
     \begin{proof}
         Sabemos que $p_*$ es inyectiva si y solo si $\ker(p_*)$ es trivial. Tomamos $\alpha$ lazo basado en $r_0$ tal que 
