--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -2888,6 +2888,65 @@ y en el cociente se verificará que $[a_1][b_1][a_1]^{-1}[b_1]^{-1} = 1$ por lo 
 \subsubsection{El grupo fundamental de $\bb{R}\bb{P}_n^2$}
 Pasamos ahora a calcular el grupo fundamental de $\bb{R}\bb{P}_n^2$.
 
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \shorthandoff{>}
+        \def\n{7} % Número de lados
+        \def\r{2} % Radio del polígono
+
+        % Definición de vértices
+        \foreach \i in {1,...,\n} {
+            \pgfmathsetmacro{\angle}{(\i-1)*360/\n+90}
+            \coordinate (A\i) at (\angle:\r);
+        }
+
+        % Lado 1
+        \draw[thick] (A1) -- (A2) coordinate[midway] (M1);
+        \node[above] at (M1) {$a_1$};
+        \pgfmathsetmacro{\ang}{90 + 180/\n + 0*360/\n}
+        \draw[->, thick, rotate around={\ang:(M1)}] (M1) ++(0, -0.01) -- ++(0,0.01);
+
+        % Lado 2
+        \draw[thick] (A2) -- (A3) coordinate[midway] (M2);
+        \node[left] at (M2) {$a_1$};
+        \pgfmathsetmacro{\ang}{90 + 180/\n + 1*360/\n}
+        \draw[->, thick, rotate around={\ang:(M2)}] (M2) ++(0, -0.01) -- ++(0,0.01);
+
+        % Lado 3
+        \draw[thick] (A3) -- (A4) coordinate[midway] (M3);
+        \node[below left] at (M3) {$a_2$};
+        \pgfmathsetmacro{\ang}{90 + 180/\n + 2*360/\n}
+        \draw[->, thick, rotate around={\ang:(M3)}] (M3) ++(0, -0.01) -- ++(0,0.01);
+
+        % Lado 4
+        \draw[thick] (A4) -- (A5) coordinate[midway] (M4);
+        \node[below] at (M4) {$a_2$};
+        \pgfmathsetmacro{\ang}{90 + 180/\n + 3*360/\n}
+        \draw[->, thick, rotate around={\ang:(M4)}] (M4) ++(0, -0.01) -- ++(0,0.01);
+
+        % Lado 5
+        \draw[thick, dashed] (A5) -- (A6) coordinate[midway] (M5);
+        % \node[below right] at (M5) {$a_2$};
+        % \pgfmathsetmacro{\ang}{90 + 180/\n + 4*360/\n}
+        % \draw[->, thick, rotate around={\ang:(M5)}] (M5) ++(0, -0.01) -- ++(0,0.01);
+
+        % Lado 6
+        \draw[thick] (A6) -- (A7) coordinate[midway] (M6);
+        \node[right] at (M6) {$a_n$};
+        \pgfmathsetmacro{\ang}{90 + 180/\n + 5*360/\n}
+        \draw[->, thick, rotate around={\ang:(M6)}] (M6) ++(0, -0.01) -- ++(0,0.01); 
+
+        % Lado 7
+        \draw[thick] (A7) -- (A1)coordinate[midway] (M7);
+        \node[above] at (M7) {$a_n$};
+        \pgfmathsetmacro{\ang}{90 + 180/\n + 6*360/\n}
+        \draw[->, thick, rotate around={\ang:(M7)}] (M7) ++(0, -0.01) -- ++(0,0.01);
+
+        \node at (0,0) {$P_0$};
+    \end{tikzpicture}
+\end{figure}
+
 Con un proceso análogo al del $n$-toro tendremos que 
 \begin{gather*}
     \pi_1(\bb{R}\bb{P}_n^2) = \frac{F(a_1,...,a_n)}{\langle i_{U*}([\alpha]) \rangle_N} = \frac{F(a_1,...,a_n)}{\langle a_1a_1...a_na_n \rangle_N}
@@ -3105,6 +3164,7 @@ Con un proceso análogo al del $n$-toro tendremos que
         \begin{gather*}
             \cc{P} = \{a_1,b_1,...,a_n,b_n;\ a_1b_1a_1^{-1}b_1^{-1}...a_nb_na_n^{-1}b_n^{-1}\}
         \end{gather*}
+
         \begin{figure}[H]
             \centering
             \begin{tikzpicture}
