--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -2753,6 +2753,8 @@ Buscamos aplicar Seifert-van Kampen y tomamos
             %V
             \filldraw[dashed, fill=red!20, draw=red] (0,0) circle [radius=1cm];
             \node[red] at (0,-1.4) {$V$};
+
+            \filldraw[fill=red, draw=red] (0,0) circle (1.5pt) node[below] {$x_0$};
         \end{scope}
     \end{tikzpicture}
 \end{figure}
@@ -2886,7 +2888,7 @@ Este grupo no será conmutativo en general pero sí lo será para el 1-toro, en 
 y en el cociente se verificará que $[a_1][b_1][a_1]^{-1}[b_1]^{-1} = 1$ por lo que se tendrá que $[a_1][b_1] = [b_1][a_1]$.\\
 
 \subsubsection{El grupo fundamental de $\bb{R}\bb{P}_n^2$}
-Pasamos ahora a calcular el grupo fundamental de $\bb{R}\bb{P}_n^2$.
+Pasamos ahora a calcular el grupo fundamental de $\bb{R}\bb{P}_n^2$ de forma análoga a como lo hicimos para el $n$-toro.
 
 \begin{figure}[H]
     \centering
@@ -2947,7 +2949,242 @@ Pasamos ahora a calcular el grupo fundamental de $\bb{R}\bb{P}_n^2$.
     \end{tikzpicture}
 \end{figure}
 
-Con un proceso análogo al del $n$-toro tendremos que 
+$\bb{R}\bb{P}_n^2$ será $P_0$ bajo la relación de equivalencia $R$ que identifica a los lados con igual nombre, es decir
+\begin{gather*}
+    \bb{R}\bb{P}_n^2 = \frac{P_0}{R}
+\end{gather*}
+Buscamos aplicar Seifert-van Kampen y tomamos 
+\begin{gather*}
+    U=\bb{R}\bb{P}_n^2 \setminus \{x_0\}\\
+    V \equiv \text{ disco abierto centrado en $x_0$ que no toque las aristas}
+\end{gather*}
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \shorthandoff{>}
+        \begin{scope}
+            \def\n{7} % Número de lados
+            \def\r{2} % Radio del polígono
+
+            % Definición de vértices
+            \foreach \i in {1,...,\n} {
+                \pgfmathsetmacro{\angle}{(\i-1)*360/\n+90}
+                \coordinate (A\i) at (\angle:\r);
+            }
+
+            % Relleno de la figura
+            \fill[red!20] (A1) -- (A2) -- (A3) -- (A4) -- (A5) -- (A6) -- (A7) -- cycle;
+
+            % Lado 1
+            \draw[thick] (A1) -- (A2) coordinate[midway] (M1);
+            \node[above] at (M1) {$a_1$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 0*360/\n}
+            \draw[->, thick, rotate around={\ang:(M1)}] (M1) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 2
+            \draw[thick] (A2) -- (A3) coordinate[midway] (M2);
+            \node[left] at (M2) {$a_1$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 1*360/\n}
+            \draw[->, thick, rotate around={\ang:(M2)}] (M2) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 3
+            \draw[thick] (A3) -- (A4) coordinate[midway] (M3);
+            \node[below left] at (M3) {$a_2$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 2*360/\n}
+            \draw[->, thick, rotate around={\ang:(M3)}] (M3) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 4
+            \draw[thick] (A4) -- (A5) coordinate[midway] (M4);
+            \node[below] at (M4) {$a_2$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 3*360/\n}
+            \draw[->, thick, rotate around={\ang:(M4)}] (M4) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 5
+            \draw[thick, dashed] (A5) -- (A6) coordinate[midway] (M5);
+            % \node[below right] at (M5) {$a_2$};
+            % \pgfmathsetmacro{\ang}{90 + 180/\n + 4*360/\n}
+            % \draw[->, thick, rotate around={\ang:(M5)}] (M5) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 6
+            \draw[thick] (A6) -- (A7) coordinate[midway] (M6);
+            \node[right] at (M6) {$a_n$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 5*360/\n}
+            \draw[->, thick, rotate around={\ang:(M6)}] (M6) ++(0, -0.01) -- ++(0,0.01); 
+
+            % Lado 7
+            \draw[thick] (A7) -- (A1)coordinate[midway] (M7);
+            \node[above] at (M7) {$a_n$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 6*360/\n}
+            \draw[->, thick, rotate around={\ang:(M7)}] (M7) ++(0, -0.01) -- ++(0,0.01);
+
+            \filldraw[fill=white, draw=red] (0,0) circle (1.5pt) node[below] {$x_0$};
+            \node[red] at (0,-2.5) {$U$};
+        \end{scope}
+        \begin{scope}[shift={(7,0)}]
+            \def\n{7} % Número de lados
+            \def\r{2} % Radio del polígono
+
+            % Definición de vértices
+            \foreach \i in {1,...,\n} {
+                \pgfmathsetmacro{\angle}{(\i-1)*360/\n+90}
+                \coordinate (A\i) at (\angle:\r);
+            }
+
+            % Lado 1
+            \draw[thick] (A1) -- (A2) coordinate[midway] (M1);
+            \node[above] at (M1) {$a_1$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 0*360/\n}
+            \draw[->, thick, rotate around={\ang:(M1)}] (M1) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 2
+            \draw[thick] (A2) -- (A3) coordinate[midway] (M2);
+            \node[left] at (M2) {$a_1$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 1*360/\n}
+            \draw[->, thick, rotate around={\ang:(M2)}] (M2) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 3
+            \draw[thick] (A3) -- (A4) coordinate[midway] (M3);
+            \node[below left] at (M3) {$a_2$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 2*360/\n}
+            \draw[->, thick, rotate around={\ang:(M3)}] (M3) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 4
+            \draw[thick] (A4) -- (A5) coordinate[midway] (M4);
+            \node[below] at (M4) {$a_2$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 3*360/\n}
+            \draw[->, thick, rotate around={\ang:(M4)}] (M4) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 5
+            \draw[thick, dashed] (A5) -- (A6) coordinate[midway] (M5);
+            % \node[below right] at (M5) {$a_2$};
+            % \pgfmathsetmacro{\ang}{90 + 180/\n + 4*360/\n}
+            % \draw[->, thick, rotate around={\ang:(M5)}] (M5) ++(0, -0.01) -- ++(0,0.01);
+
+            % Lado 6
+            \draw[thick] (A6) -- (A7) coordinate[midway] (M6);
+            \node[right] at (M6) {$a_n$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 5*360/\n}
+            \draw[->, thick, rotate around={\ang:(M6)}] (M6) ++(0, -0.01) -- ++(0,0.01); 
+
+            % Lado 7
+            \draw[thick] (A7) -- (A1)coordinate[midway] (M7);
+            \node[above] at (M7) {$a_n$};
+            \pgfmathsetmacro{\ang}{90 + 180/\n + 6*360/\n}
+            \draw[->, thick, rotate around={\ang:(M7)}] (M7) ++(0, -0.01) -- ++(0,0.01);
+
+            %V
+            \filldraw[dashed, fill=red!20, draw=red] (0,0) circle [radius=1cm];
+            \node[red] at (0,-1.4) {$V$};
+
+            \filldraw[fill=red, draw=red] (0,0) circle (1.5pt) node[below] {$x_0$};
+        \end{scope}
+    \end{tikzpicture}
+\end{figure}
+
+Es claro que $\pi_1(V)$ es trivial por ser un disco. Para calcular el grupo fundamental de $U$ comenzamos considerando un retracto de deformación suyo. Es fácil ver que el borde (en el cociente) es retracto de deformación de $U$. Además, todos los vértices del borde tendrán la misma clase de equivalencia bajo $R$. Para ver esto último vamos a numerar los vértices como $v_{ij}$ con $i\in \{1,2\}$ y $j\in \{1,...,n\}$ de forma que $v_{1j}$ sea el principio de la primera vez que aparece $a_j$ y $v_{2j}$ el principio de la segunda vez que aparece la arista $a_j$ para todo $j\in \{1,...,n\}$. Es decir,
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \shorthandoff{>}
+        % Línea
+        \draw[dashed] (-5,0) -- (-4,0);
+        \draw[thick] (-4,0) -- (0,0);
+        \draw[dashed] (0,0) -- (1,0);
+
+        % Vértices
+        \filldraw (-4,0) circle (1.5pt) node[above] {$v_{1j}$};
+        \filldraw (-2,0) circle (1.5pt) node[above] {$v_{2j}$};
+        \filldraw (0,0) circle (1.5pt) node[above] {$v_{1,j+1}$};
+
+        % Flechas
+        \draw[thick,->] (-3.01,0) -- (-2.99,0);
+        \draw[thick,->] (-1.01,0) -- (-0.99,0);
+
+        % Lados
+        \node[label=below:{$a_j$}] at (-3,0) {};
+        \node[label=below:{$a_j$}] at (-1,0) {};
+    \end{tikzpicture}
+\end{figure}
+
+Entonces tenemos que 
+\begin{gather*}
+    [v_{1j}] = [v_{2j}] \text{ por ser principio de la 1ª $a_j$  y el principio de la 2ª $a_j$ respectivamente}\\
+    [v_{2j}] = [v_{1,j+1}] \text{ por ser el final de la 1ª $a_j$ y el final de la 2ª $a_j$ respectivamente}\\
+\end{gather*}
+Como la $j$ es arbitraria se verificará para todo $j\in\{1,...,n\}$ (entendiendo que $n+1$ vuelve a ser el $1$) y por tanto todos los vértices son de la misma clase de equivalencia. Nos quedará algo como 
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \shorthandoff{>}
+        \begin{scope}
+            \draw[thick] plot[smooth, tension=1] coordinates {
+                (0,0) (-1.5,0.5) (-3,0) (-1.5,-0.5) (0,0)
+            };
+            \draw[->, thick] (-1.72,0.49) ++(+0.01, 0) -- ++(-0.01,0);
+            \node at (-1.72, 0.1) {$a_2$};
+        \end{scope}
+
+        \begin{scope}[rotate around={90:(0,0)}]
+            \draw[thick] plot[smooth, tension=1] coordinates {
+                (0,0) (-1.5,0.5) (-3,0) (-1.5,-0.5) (0,0)
+            };
+            \draw[->, thick] (-1.72,0.49) ++(+0.01, 0) -- ++(-0.01,0);
+            \node at (-1.72, 0.1) {$a_1$};
+        \end{scope}
+
+        \begin{scope}[rotate around={180:(0,0)}]
+            \draw[thick] plot[smooth, tension=1] coordinates {
+                (0,0) (-1.5,0.5) (-3,0) (-1.5,-0.5) (0,0)
+            };
+            \draw[->, thick] (-1.72,0.49) ++(+0.01, 0) -- ++(-0.01,0);
+            \node at (-1.72, 0.1) {$a_n$};
+        \end{scope}
+
+        \begin{scope}[rotate around={270:(0,0)}]
+            \node at (-0.75, 0) {$...$};
+        \end{scope}
+    \end{tikzpicture}%
+\end{figure}%
+
+por lo que $\pi_1(U)\cong F(a_1,b_1,a_2,b_2,...,a_n,b_n)$. Además el grupo de la intersección es claro que es $\pi_1(U\cap V) \cong \bb{Z}$ generado por $[\alpha]$ ya que tiene a una circunferencia centrada en $x_0$ y de radio menor que el radio de $V$ por retracto de deformación.
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \begin{scope} [shift={(-5,0)}]
+            \filldraw[fill=red!20, draw=red, dashed] (0,0) circle [radius=1.5cm];
+            \filldraw[fill=white, draw=red] (0,0) circle (1.5pt) node[below] {$x_0$};
+            \node at (0,-2) {$U\cap V$};
+        \end{scope}
+
+        \draw[dashed, ->] (-3,0) -- (-2,0);
+
+        \begin{scope}
+            \filldraw[fill=red!20, draw=red, dashed] (0,0) circle [radius=1.5cm];
+            \filldraw[fill=white, draw=red] (0,0) circle (1.5pt);
+
+            \draw[red, thick] (0,0) circle [radius=1cm];
+
+            % Flechas
+            \def\n{10}
+            \foreach \i in {0,...,\numexpr\n-1\relax} {
+                \draw[thick, blue, ->] ({360/\n * \i}:0.2) -- ({360/\n * \i}:0.9);
+                \draw[thick, blue, ->] ({360/\n * \i}:1.4) -- ({360/\n * \i}:1.1);
+            }
+        \end{scope}
+
+        \draw[dashed, ->] (2,0) -- (3,0);
+
+        \begin{scope}[shift={(5,0)}]
+            \draw[red, thick] (0,0) circle [radius=1cm];
+        \end{scope}
+    \end{tikzpicture}
+\end{figure}
+
+Aplicando Seifert-van Kampen tenemos que 
 \begin{gather*}
     \pi_1(\bb{R}\bb{P}_n^2) = \frac{F(a_1,...,a_n)}{\langle i_{U*}([\alpha]) \rangle_N} = \frac{F(a_1,...,a_n)}{\langle a_1a_1...a_na_n \rangle_N}
 \end{gather*}
@@ -2993,7 +3230,7 @@ Con un proceso análogo al del $n$-toro tendremos que
 \begin{definicion}
     Dada una presentación poligonal $\cc{P}$ denotamos por $V$, $A$ y $C$ al número de vértices, de aristas y caras (o número de polígonos de $\cc{P}$) respectivamente donde el número de vértices y aristas está visto en el espacio cociente $|\cc{P}|$. Definimos entonces la \textbf{característica de Euler} de $\cc{P}$ como 
     \begin{gather*}
-        \chi(\cc{P}) = C-A+V
+        \chi(\cc{P}) = V-A+C
     \end{gather*} 
 \end{definicion}
 
@@ -3239,7 +3476,65 @@ Con un proceso análogo al del $n$-toro tendremos que
             \chi(\cc{P}) = 1-2n+1 = 2-2n = 2(1-n)
         \end{gather*}
 
-        \item Consideramos la presentación de $\bb{R}\bb{P}_n^{1}$, $\cc{P}=\{a_1,...,a_n;\ a_1a_1...a_na_n\}$.
+        \item Consideramos la presentación de $\bb{R}\bb{P}_n^2$, $\cc{P}=\{a_1,...,a_n;\ a_1a_1...a_na_n\}$.
+        
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                \def\n{7} % Número de lados
+                \def\r{2} % Radio del polígono
+
+                % Definición de vértices
+                \foreach \i in {1,...,\n} {
+                    \pgfmathsetmacro{\angle}{(\i-1)*360/\n+90}
+                    \coordinate (A\i) at (\angle:\r);
+                }
+
+                % Lado 1
+                \draw[thick] (A1) -- (A2) coordinate[midway] (M1);
+                \node[above] at (M1) {$a_1$};
+                \pgfmathsetmacro{\ang}{90 + 180/\n + 0*360/\n}
+                \draw[->, thick, rotate around={\ang:(M1)}] (M1) ++(0, -0.01) -- ++(0,0.01);
+
+                % Lado 2
+                \draw[thick] (A2) -- (A3) coordinate[midway] (M2);
+                \node[left] at (M2) {$a_1$};
+                \pgfmathsetmacro{\ang}{90 + 180/\n + 1*360/\n}
+                \draw[->, thick, rotate around={\ang:(M2)}] (M2) ++(0, -0.01) -- ++(0,0.01);
+
+                % Lado 3
+                \draw[thick] (A3) -- (A4) coordinate[midway] (M3);
+                \node[below left] at (M3) {$a_2$};
+                \pgfmathsetmacro{\ang}{90 + 180/\n + 2*360/\n}
+                \draw[->, thick, rotate around={\ang:(M3)}] (M3) ++(0, -0.01) -- ++(0,0.01);
+
+                % Lado 4
+                \draw[thick] (A4) -- (A5) coordinate[midway] (M4);
+                \node[below] at (M4) {$a_2$};
+                \pgfmathsetmacro{\ang}{90 + 180/\n + 3*360/\n}
+                \draw[->, thick, rotate around={\ang:(M4)}] (M4) ++(0, -0.01) -- ++(0,0.01);
+
+                % Lado 5
+                \draw[thick, dashed] (A5) -- (A6) coordinate[midway] (M5);
+                % \node[below right] at (M5) {$a_2$};
+                % \pgfmathsetmacro{\ang}{90 + 180/\n + 4*360/\n}
+                % \draw[->, thick, rotate around={\ang:(M5)}] (M5) ++(0, -0.01) -- ++(0,0.01);
+
+                % Lado 6
+                \draw[thick] (A6) -- (A7) coordinate[midway] (M6);
+                \node[right] at (M6) {$a_n$};
+                \pgfmathsetmacro{\ang}{90 + 180/\n + 5*360/\n}
+                \draw[->, thick, rotate around={\ang:(M6)}] (M6) ++(0, -0.01) -- ++(0,0.01); 
+
+                % Lado 7
+                \draw[thick] (A7) -- (A1)coordinate[midway] (M7);
+                \node[above] at (M7) {$a_n$};
+                \pgfmathsetmacro{\ang}{90 + 180/\n + 6*360/\n}
+                \draw[->, thick, rotate around={\ang:(M7)}] (M7) ++(0, -0.01) -- ++(0,0.01);
+
+            \end{tikzpicture}
+        \end{figure}
         
         Donde tendremos ya probado que solo hay un vértice por lo que 
         \begin{gather*}
