--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -918,7 +918,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
     \end{enumerate}
 \end{ejemplo}
 
-Hasta ahora lo que hemos visto es que para estudiar el número de recubridores de un espacio $B$ podemos elegir un punto $b_0\in B$ y pasar a estudiar $\pi_1(B,b_0)$ y estudiando sus subgrupos $H>\pi_1(B,b_0)$ podíamos afirmar que como mucho había un recubridor por cada uno de ellos (o sus conjugados). Por tanto cuanto más ``grande'' sea el grupo fundamental, más recubridores podremos encontrar a priori. \\
+Hasta ahora lo que hemos visto es que para estudiar el número de recubridores de un espacio $B$ podemos elegir un punto $b_0\in B$ y pasar a estudiar $\pi_1(B,b_0)$ y estudiando sus subgrupos $H<\pi_1(B,b_0)$ podíamos afirmar que como mucho había un recubridor por cada uno de ellos (o sus conjugados). Por tanto cuanto más ``grande'' sea el grupo fundamental, más recubridores podremos encontrar a priori. \\
 
 \begin{prop}
     Sea $\phi$ un homomorfismo de recubridores desde $(R_1,p_1)$ en $(R_2,p_2)$. Entonces $\phi:R_1 \to R_2$ es una aplicación recubridora.
@@ -1000,7 +1000,7 @@ Hasta ahora lo que hemos visto es que para estudiar el número de recubridores d
 \end{prop}
 
 \begin{coro}
-    Sean $(R_1, p_1)$, $(R_2, p_2)$ dos recubridores de un espacio topológico $B$, $b_0\in B$, $r_1\in p_1^{-1}(b_0)$ u $r_2\in p_2^{-1}(b_0)$. Si se verifica que
+    Sean $(R_1, p_1)$, $(R_2, p_2)$ dos recubridores de un espacio topológico $B$, $b_0\in B$, $r_1\in p_1^{-1}(b_0)$ y $r_2\in p_2^{-1}(b_0)$. Si se verifica que
     \begin{gather*}
         p_{1*}(\pi_1(R_1, r_1)) \subseteq p_{2*}(\pi_1(R_2, r_2))
     \end{gather*}
