--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -1043,9 +1043,9 @@ Hasta ahora lo que hemos visto es que para estudiar el número de recubridores d
 
         \item Decimos que $B$ es \textbf{semilocalmente simplemente conexo} si todo punto $b\in B$ tiene un entorno $U$ tal que 
         \begin{gather*}
-            (i_u)_* : \pi_1(U,b) \to \pi_1(B,b)
+            (i_U)_* : \pi_1(U,b) \to \pi_1(B,b)
         \end{gather*}
-        es trivial, donde $i_u:U\to B$ es la inclusión.
+        es trivial, donde $i_U:U\to B$ es la inclusión.
     \end{enumerate}
 \end{definicion}
 
