--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -3536,7 +3536,7 @@ Aplicando Seifert-van Kampen tenemos que
             \end{tikzpicture}
         \end{figure}
         
-        Donde tendremos ya probado que solo hay un vértice por lo que 
+        Donde tenemos ya probado que solo hay un vértice por lo que 
         \begin{gather*}
             C=1\\
             A=n\\
@@ -3564,9 +3564,43 @@ Aplicando Seifert-van Kampen tenemos que
         \chi(\bb{S}^2) = 2\\
         \chi(\bb{R}\bb{P}^2) = 1\\
         \chi(\bb{T}_n) = 2-2n\ (\leq 0),\ n\geq 1\\
-        \chi(\bb{R}\bb{P}_n^2) = 2-n\ (\leq 0),\ n\geq 1
+        \chi(\bb{R}\bb{P}_n^2) = 2-n\ (\leq 0),\ n\geq 2
     \end{gather*}
-    Si la superficie que queremos estudiar tuviera característica positiva o impar sería muy fácil de clasificar. Si por el contrario tuviéramos un número negativo par aún no sabríamos clasificarlo.
+    Si la superficie que queremos estudiar tuviera característica positiva o impar sería muy fácil de clasificar. Si por el contrario tuviéramos característica $0$ o un número negativo par aún no sabríamos clasificarlo.
 \end{observacion}
+
+\begin{definicion}
+    Decimos que una presentación poligonal $\cc{P}$ es \textbf{no orientada} si en alguna de sus expresiones aparece 2 veces un símbolo con el mismo exponente, es decir, existirá un $w_i$ de la forma
+    \begin{gather*}
+        w_i=...a...a...
+    \end{gather*}
+    Decimos que una superficie compacta es \textbf{no orientable} si tiene una presentación poligonal no orientada.
+\end{definicion}
+
+\begin{prop}
+    Sea $S$ una superficie compacta y conexa, entonces son equivalentes:
+    \begin{enumerate}
+        \item $S$ es orientable.
+        \item $S$ tiene una presentación poligonal con una sola expresión que es orientada.
+        \item Cualquier presentación poligonal de $S$ de una única expresión es orientada.
+    \end{enumerate}
+\end{prop}
+
+Nos planteamos ahora estudiar cuáles son las superficies compactas orientables y con las presentaciones que conocemos tenemos el siguiente resultado:
+\begin{gather*}
+    \begin{array}{r c  l}
+        aa^{-1}bb^{-1} \text{ es una presentación de } \bb{S}^2 & \Rightarrow & \bb{S}^2 \text{ es orientable}\\
+    aabb \text{ es una presentación de } \bb{R}\bb{P}^2 & \Rightarrow & \bb{R}\bb{P}^2 \text{ es no orientable}\\
+    a_1b_1a_1^{-1}b_1^{-1}...a_nb_na_n^{-1}b_n^{-1} \text{ es una presentación de } \bb{T}_n & \Rightarrow & \bb{T}_n \text{ es orientable ($n\geq 1$)}\\
+    a_1a_1...a_na_n \text{ es una presentación de } \bb{R}\bb{P}^n  & \Rightarrow & \bb{R}\bb{P}^n \text{ es no orientable ($n\geq 2$)}
+    \end{array}
+\end{gather*}
+Por tanto tenemos ya una manera de distinguir entre las superficies con característica de Euler $0$ o negativa par estudiando la orientabilidad de la superficie.\\
+
+\begin{coro}
+    La caracteristica de Euler y la orientabilidad de una superficie compacta $S$ la determinan. 
+\end{coro}
+
+
 
 
